--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#b2b2b2</color>
+    <color name="colorAccent">#FF5722</color>
+    <color name="textColor">#777675</color>
+    <color name="light_grey">#D5D3D3</color>
+    <color name="light_grey2">#DCDAD9</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
