--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -27,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:maxLines="2"
             android:text="News Title"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,12 +37,13 @@
         <TextView
             android:id="@+id/tv_news_description"
             style="@style/TextStyle16"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="News Description"
             android:layout_margin="16dp"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:maxLines="3"
+            android:text="News Description"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_news_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
